--- a/kotlin-native/backend.native/tests/build.gradle
+++ b/kotlin-native/backend.native/tests/build.gradle
@@ -186,11 +186,10 @@ tasks.named("run") {
     // Add regular gradle test tasks
     dependsOn(tasks.withType(Test).matching { it.enabled })
     dependsOn(tasks.withType(FileCheckTest).matching { it.enabled })
-    dependsOn(":kotlin-native:Interop:Indexer:check")
-    dependsOn(":kotlin-native:Interop:StubGenerator:check")
-    dependsOn(":native:kotlin-native-utils:check")
+    // TODO(KT-65391): This task should be run by Compiler Tests (Misc) configuration
+    dependsOn(":miscNativeCompilerTest")
+    // TODO(KT-65391): This should be run by Compiler Tests (Native) configuration
     dependsOn(":native:objcexport-header-generator:check")
-    dependsOn(":kotlin-native:backend.native:check")
 }
 
 // Was a subset of tests.
