--- a/kotlin-native/build.gradle
+++ b/kotlin-native/build.gradle
@@ -787,6 +787,10 @@ publishing {
                     classifier = HostManager.platformName()
                     extension = (PlatformInfo.isWindows()) ? 'zip' : 'tar.gz'
                 }
+                mvn.artifact(sbomBundleRegular.map { it.outputDirectory.file("BundleRegular.spdx.json") }) {
+                    classifier = HostManager.platformName()
+                    extension = "spdx.json"
+                }
             }
 
             KotlinBuildPublishingPluginKt.configureKotlinPomAttributes(
@@ -823,6 +827,10 @@ publishing {
                 mvn.artifact(bundlePrebuilt) {
                     classifier = HostManager.platformName()
                     extension = (PlatformInfo.isWindows()) ? 'zip' : 'tar.gz'
+                }
+                mvn.artifact(sbomBundlePrebuilt.map { it.outputDirectory.file("BundlePrebuilt.spdx.json") }) {
+                    classifier = HostManager.platformName()
+                    extension = "spdx.json"
                 }
             }
             KotlinBuildPublishingPluginKt.configureKotlinPomAttributes(
